@@ -3120,4 +3120,8 @@
 	  the PLL after re-awakening from deep sleep modes.
 	* fs/fs_foreachinode.c and fs/fs_foreachmountpoint.c:  All logic to traverse
 	  inodes and mountpoints in the NuttX psuedo-file system.
-
+	* fs/fat/fs_fat32.c: Max. filename length reported by statfs() was wrong
+	  if FAT long file names were enabled.
+	* lib/stdio/lib_libvsprintf.c:  Fieldwidth and justification were not
+	  supported for the %s format.  As a result, %s, %12s, and %-12s all
+	  produced the same output.
